...
    <string name="task_interval_field_name">Interval</string>
    <string name="task_name_field_name">Name</string>
    <string name="task_host_field_name">Host</string>
    <string name="task_url_field_name">URL</string>
    <string name="task_address_field_name">Address</string>
    <string name="task_port_field_name">Port</string>
    <string name="accesstypedata_ping_count_field_name">Ping count</string>
    <string name="accesstypedata_ping_package_size_field_name">Package size</string>
    <string name="accesstypedata_connect_count_field_name">Connect count</string>
    <string name="accesstypedata_snmp_community_field_name">Community</string>
    <string name="accesstypedata_snmp_user_name_field_name">Auth username</string>
    <string name="accesstypedata_snmp_auth_passphrase_field_name">Auth passphrase</string>
    <string name="accesstypedata_snmp_priv_passphrase_field_name">Privacy passphrase</string>
    <string name="resolve_host_field_name">Connect-to host</string>
    <string name="resolve_port_field_name">Connect-to port</string>
...
    <string name="basic_auth_username_field_name">Basic auth username</string>
    <string name="basic_auth_password_field_name">Basic auth password</string>
    <string name="username_field_name">Username</string>
    <string name="password_field_name">Password</string>
    <string name="password_confirm_field_name">Confirm password</string>
    <string name="invalid_no_match">Values do not match</string>
    <string name="invalid_no_value">No value specified</string>
    <string name="invalid_number_format">Invalid format</string>
    <string name="invalid_host_format">No valid host or IP address</string>
    <string name="invalid_url_format">No valid URL</string>
    <string name="invalid_file_name">No valid filename</string>
    <string name="invalid_folder_name">No valid folder path</string>
    <string name="invalid_characters">Value contains invalid characters</string>
    <string name="invalid_exists">Value already exists</string>
...
