...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/linearlayout_dialog_settings_input_value_margin_left"
            android:layout_marginTop="@dimen/linearlayout_dialog_settings_input_value_margin_top">

            <EditText
                android:id="@+id/edittext_dialog_settings_input_value"
                style="@style/EditTextTheme"
                android:layout_width="@dimen/edittext_dialog_settings_input_value_width"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:inputType="textUri|textMultiLine|textNoSuggestions"
                android:scrollHorizontally="false"
                android:maxLines="@integer/edittext_dialog_settings_input_value_max_lines"
                android:text=""
                tools:ignore="LabelFor" />

...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/linearlayout_dialog_settings_input_ok_cancel_padding_top"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageview_dialog_settings_input_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:contentDescription="@string/label_dialog_settings_input_ok"
                app:srcCompat="@drawable/icon_ok_selector" />

            <ImageView
                android:id="@+id/imageview_dialog_settings_input_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:contentDescription="@string/label_dialog_settings_input_cancel"
...
